# discord-embed-preview

./: .gitignore  README.md  main.py  pyproject.toml
cogs/: __init__.py  message_preview.py
scripts/: restart.sh  run_bot.sh  start.sh  stop.sh
utils/: __init__.py  embed_builder.py  fetcher.py  helpers.py  preview_core.py
